--- a/app/src/main/res/layout/saved_file_view.xml
+++ b/app/src/main/res/layout/saved_file_view.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:padding="2dp"
+    android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/saved_photo_image_view"
@@ -11,17 +12,7 @@
         android:layout_height="130dp" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#AAFFFFFF"
-        android:text="Name of Photo"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/time_remaing_textView"
+        android:id="@+id/time_remaining_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/saved_photo_image_view"
